<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/show_all_students"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/all_students"/>
    <item
        android:id="@+id/show_all_groups"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/all_groups"/>
    <item
        android:id="@+id/search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/search"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/search"/>

</menu>