<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/label_student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/student_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/label_student_name"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/label_student_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/student_name"
            android:text="@string/student_email"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/student_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/label_student_email"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/label_student_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/student_email"
            android:text="@string/phone_number"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/student_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/label_student_phone"
            android:ems="10"
            android:inputType="phone" />

        <TextView
            android:id="@+id/label_company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/student_phone_number"
            android:text="@string/company_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/student_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/label_company_name"
            android:ems="10"
            android:inputType="text" />

        <Spinner
            android:id="@+id/spinner_groups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/student_company_name"
            android:layout_below="@+id/student_company_name" />

        <Button
            android:id="@+id/save_group_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner_groups"
            android:onClick="saveStudent"
            android:text="@string/save" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/save_group_button"
            android:layout_alignBottom="@+id/save_group_button"
            android:layout_centerHorizontal="true"
            android:onClick="cancel"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/save_group_button"
            android:layout_alignBottom="@+id/save_group_button"
            android:layout_alignParentRight="true"
            android:enabled="false"
            android:onClick="deleteStudent"
            android:text="@string/delete" />
    </RelativeLayout>

</ScrollView>