<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/label_group_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/label_group_name"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/save_group_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/group_name"
            android:onClick="saveGroup"
            android:text="@string/save" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/save_group_button"
            android:layout_alignBottom="@+id/save_group_button"
            android:layout_centerHorizontal="true"
            android:onClick="cancel"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/save_group_button"
            android:layout_alignBottom="@+id/save_group_button"
            android:layout_alignParentRight="true"
            android:enabled="false"
            android:onClick="deleteGroup"
            android:text="@string/delete" />
    </RelativeLayout>

</ScrollView>